@@ -19,9 +19,7 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.regex.Pattern;
 
 @RequiredArgsConstructor
@@ -32,9 +30,7 @@ public class JwtTokenFilter extends OncePerRequestFilter {
   private final String SECRET_KEY;
 
   // 허용할 경로 목록 (CORS 예외 처리)
-  private static final List<String> EXCLUDED_PATHS = Arrays.asList(
-          "/api/auth/.*"
-  );
+  private static final Pattern EXCLUDED_PATH_PATTERN = Pattern.compile("^(/api/auth/.*|/hisign_1/api/auth/.*|/hisign_1/swagger-ui/.*|/hisign_1/v3/api-docs/.*|/hisign_1/v3/api-docs|/hisign_1/swagger-resources/.*|/hisign_1/webjars/.*|/hisign_1/swagger-ui.html)$");
 
   @Override
   protected void doFilterInternal(
@@ -43,46 +39,45 @@ public class JwtTokenFilter extends OncePerRequestFilter {
           @NonNull FilterChain filterChain
   ) throws ServletException, IOException {
     String requestURI = request.getRequestURI();
+    System.out.println("Request URI: " + requestURI);
 
     // 특정 경로는 필터링 제외
     if (isExcludedPath(requestURI)) {
+      System.out.println("Excluding from JWT filter: " + requestURI);
       filterChain.doFilter(request, response);
       return;
     }
+
     String authorizationHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
+    if (authorizationHeader == null) {
+      System.out.println("Authorization header missing. Blocking request.");
+      throw new DoNotLoginException();
+    }
 
-    // Header의 Authorization 값이 비어있으면 => Jwt Token을 전송하지 않음 => 로그인 하지 않음
-    if (authorizationHeader == null) throw new DoNotLoginException();
-
-    // Header의 Authorization 값이 'Bearer '로 시작하지 않으면 => 잘못된 토큰
-    if (!authorizationHeader.startsWith("Bearer "))
+    if (!authorizationHeader.startsWith("Bearer ")) {
+      System.out.println("Invalid token format.");
       throw new WrongTokenException("Bearer 로 시작하지 않는 토큰입니다.");
+    }
 
-    // 전송받은 값에서 'Bearer ' 뒷부분(Jwt Token) 추출
     String token = authorizationHeader.split(" ")[1];
-
     Member loginMember = authService.getLoginMember(JwtUtil.getUserId(token, SECRET_KEY));
 
-    // loginUser 정보로 UsernamePasswordAuthenticationToken 발급
     UsernamePasswordAuthenticationToken authenticationToken =
-        new UsernamePasswordAuthenticationToken(
-                loginMember.getUniqueId(),
-            null,
-            null);
-            //현재는 관리자와 사용자를 구분 하지 않고 있음.
-            //이건 자바 11버전
-            //List.of(new SimpleGrantedAuthority(loginMember.getName())));
-            //이건 자바 8버전
-            //Collections.singletonList(new SimpleGrantedAuthority(loginMember.getName())));
+            new UsernamePasswordAuthenticationToken(
+                    loginMember.getUniqueId(),
+                    null,
+                    Collections.singletonList(new SimpleGrantedAuthority(loginMember.getRole())));
 
     authenticationToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
-    // 권한 부여
     SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+
+    System.out.println("User authenticated successfully.");
     filterChain.doFilter(request, response);
   }
+
   // 특정 URL이 필터링 예외 대상인지 확인하는 메서드
   private boolean isExcludedPath(String requestURI) {
-    return EXCLUDED_PATHS.stream().anyMatch(requestURI::matches);
+    return EXCLUDED_PATH_PATTERN.matcher(requestURI).matches();
   }
+
 }
